<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/margin"
    android:layout_marginEnd="@dimen/margin"
    android:padding="@dimen/smallPadding"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:elevation="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_8sdp"
                android:src="@drawable/ic_wifi_off" />

            <TextView
                style="@style/TextViewContent"
                android:layout_gravity="center"
                android:layout_margin="@dimen/minMargin"
                android:text="@string/no_internet_connection"
                android:textColor="@color/primary_tint" />

            <TextView
                style="@style/TextViewContent"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/smallMargin"
                android:layout_marginBottom="@dimen/smallMargin"
                android:text="@string/check_your_internet_connection_and_try_again"
                android:textAlignment="center" />

            <RelativeLayout
                android:id="@+id/retry"
                style="@style/ButtonStyle"
                android:layout_marginBottom="@dimen/margin"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_button">

                <TextView
                    android:id="@+id/tvSend"
                    style="@style/TextViewContent"
                    android:layout_centerInParent="true"
                    android:text="@string/retry"
                    android:textColor="@color/white"
                    android:textSize="@dimen/normalTextSize"
                    android:visibility="visible" />

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>