<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable
            name="userModel"
            type="com.myapplication.userAction.login.viewmodel.LoginVM" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:context=".userAction.login.ui.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:orientation="vertical">

                <TextView
                    style="@style/TextViewHeading"
                    android:padding="@dimen/padding"
                    android:text="@string/log_in"
                    android:textSize="@dimen/largeTextSize" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmailLogin"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginBottom="@dimen/margin"
                    setError="@{userModel.isValidEmail}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmailLogin"
                        style="@style/EditTextStyle"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress|textNoSuggestions"
                        android:text="@={userModel.email}" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPasswordLogin"
                    style="@style/TextInputLayoutStyle"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginBottom="@dimen/margin"
                    setError="@{userModel.isValidPassword}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPasswordLogin"
                        style="@style/EditTextStyle"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:text="@={userModel.password}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                style="@style/TextViewContent"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin"
                android:text="@string/forgot_password"
                android:textColor="@color/grey" />

            <RelativeLayout
                android:id="@+id/buttonLogin"
                style="@style/ButtonStyle"
                android:layout_marginBottom="@dimen/margin"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/maxMargin"
                android:layout_marginEnd="@dimen/maxMargin"
                android:background="@drawable/bg_button">

                <TextView
                    android:id="@+id/tvLogin"
                    style="@style/TextViewContent"
                    android:layout_centerInParent="true"
                    android:text="@string/log_in"
                    android:textColor="@color/white"
                    android:visibility="visible"
                    android:textSize="@dimen/normalTextSize" />

                <ProgressBar
                    android:id="@+id/loader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:scaleX="0.6"
                    android:scaleY="0.6"
                    android:visibility="gone"
                    android:indeterminateTint="@color/progress_tint" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/buttonFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/medLMargin"
                    android:src="@drawable/ic_facebook"/>

                <ImageView
                    android:id="@+id/buttonGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/minPadding"
                    android:layout_marginStart="@dimen/medLMargin"
                    android:src="@drawable/ic_google"
                    android:orientation="horizontal" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvSignUpLogin"
                style="@style/TextViewContent"
                android:layout_marginBottom="@dimen/margin"
                android:padding="@dimen/smallPadding"
                android:text="@string/don_t_have_an_account" />

        </LinearLayout>

    </ScrollView>

</layout>