<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />
        <variable name="userModel"
            type="com.myapplication.userAction.forgot.viewmodel.ForgotVM" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".userAction.forgot.ui.ForgotPasswordActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/smallPadding"
                android:paddingEnd="@dimen/padding">

                <TextView
                    style="@style/TextViewHeading"
                    android:layout_centerInParent="true"
                    android:text="@string/forgot_password2" />

                <ImageView
                    android:id="@+id/buttonBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/smallPadding"
                    android:src="@drawable/ic_back" />

            </RelativeLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBar"
            android:background="@color/white"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextViewContent"
                        android:layout_marginStart="@dimen/margin"
                        android:layout_marginEnd="@dimen/margin"
                        android:layout_marginBottom="@dimen/margin"
                        android:text="@string/reset_your_password"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilEmailForgotP"
                        style="@style/TextInputLayoutStyle"
                        android:layout_marginStart="@dimen/margin"
                        android:layout_marginEnd="@dimen/margin"
                        android:layout_marginBottom="@dimen/margin"
                        setError="@{userModel.isValidEmail}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmailForgotP"
                            style="@style/EditTextStyle"
                            android:hint="@string/email"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:text="@={userModel.email}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/buttonSend"
                    style="@style/ButtonStyle"
                    android:layout_marginBottom="@dimen/margin"
                    android:layout_marginStart="@dimen/maxMargin"
                    android:layout_marginEnd="@dimen/maxMargin"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/bg_button">

                    <TextView
                        android:id="@+id/tvSend"
                        style="@style/TextViewContent"
                        android:layout_centerInParent="true"
                        android:text="@string/send"
                        android:textColor="@color/white"
                        android:textSize="@dimen/normalTextSize"
                        android:visibility="visible" />

                    <ProgressBar
                        android:id="@+id/loader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        android:layout_centerInParent="true"
                        android:indeterminateTint="@color/progress_tint"
                        android:visibility="gone"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</layout>