<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />
        <variable name="viewModel"
            type="com.myapplication.userAction.reset.viewmodel.ResetVM" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dashboard.changePassword.ui.ChangePasswordActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="@dimen/smallPadding"
                android:paddingEnd="@dimen/padding">

                <TextView
                    style="@style/TextViewHeading"
                    android:layout_centerInParent="true"
                    android:text="@string/change_password" />

                <ImageView
                    android:id="@+id/buttonBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="@dimen/smallPadding"
                    android:src="@drawable/ic_back" />

            </RelativeLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBar"
            android:background="@color/white"
            android:fillViewport="true"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layoutET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin"
                    app:layout_constraintTop_toTopOf="parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilCurrentPassword"
                        style="@style/TextInputLayoutStyle"
                        android:layout_marginStart="@dimen/smallMargin"
                        android:layout_marginEnd="@dimen/smallMargin"
                        android:layout_marginBottom="@dimen/margin"
                        setError="@{viewModel.isValidCurrentPassword}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etCurrentPassword"
                            style="@style/EditTextStyle"
                            android:hint="@string/current_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:text="@={viewModel.currentPassword}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilNewPassword"
                        style="@style/TextInputLayoutStyle"
                        android:layout_marginStart="@dimen/smallMargin"
                        android:layout_marginEnd="@dimen/smallMargin"
                        android:layout_marginBottom="@dimen/margin"
                        setError="@{viewModel.isValidNewPassword}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etNewPassword"
                            style="@style/EditTextStyle"
                            android:hint="@string/new_password"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:text="@={viewModel.newPassword}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tilConfirmPassword"
                        style="@style/TextInputLayoutStyle"
                        android:layout_marginStart="@dimen/smallMargin"
                        android:layout_marginEnd="@dimen/smallMargin"
                        android:layout_marginBottom="@dimen/margin"
                        setError="@{viewModel.isValidConfirmPassword}">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etConfirmPassword"
                            style="@style/EditTextStyle"
                            android:hint="@string/confirm_password"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:text="@={viewModel.confirmPassword}" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/buttonUpdate"
                    android:layout_width="match_parent"
                    style="@style/ButtonStyle"
                    android:layout_marginStart="@dimen/maxMargin"
                    android:layout_marginEnd="@dimen/maxMargin"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin"
                    android:layout_marginBottom="@dimen/margin"
                    app:layout_constraintTop_toBottomOf="@+id/layoutET"
                    android:background="@drawable/bg_button">

                    <TextView
                        android:id="@+id/tvUpdate"
                        style="@style/TextViewContent"
                        android:layout_centerInParent="true"
                        android:text="@string/update_password"
                        android:textColor="@color/white"
                        android:textSize="@dimen/normalTextSize"
                        android:visibility="visible" />

                    <ProgressBar
                        android:id="@+id/loader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:scaleX="0.6"
                        android:scaleY="0.6"
                        android:indeterminateTint="@color/progress_tint"
                        android:visibility="gone" />

                </RelativeLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </RelativeLayout>

</layout>